--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -3,10 +3,22 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 #f-form {
-  max-width: 500px;
+  max-width: 300px;
+  width: 100%;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form{
+  max-width: 400px;
+  width: 100%;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -19,14 +31,13 @@
   margin-bottom: 5px;
 }
 
-#f-form input[type="email"],
-#f-form input[type="text"],
-#f-form textarea {
+#f-form input[type="text"]{
   width: 100%;
   padding: 10px;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   border: 1px solid #ccc;
   border-radius: 5px;
+  box-sizing: border-box;
 }
 
 #f-form button[type="submit"] {
@@ -46,4 +57,29 @@
   color: red;
   font-size: 14px;
   margin-top: 5px;
+}
+
+.success-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.success-message {
+  text-align: center;
+  padding: 20px;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.success-message h3 {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.success-message p {
+  margin: 0;
 }
